fix slick dots on tablet

--- a/src/components/_pages/Homepage/Homepage.scss
+++ b/src/components/_pages/Homepage/Homepage.scss
@@ -27,6 +27,9 @@
   &__testimonials {
     @include make-section;
     position: relative;
+  }
+
+  &__testimonialsInner {
     @include breakpoint(medium) {
       display: grid;
       grid-template-columns: 33% 66%;
@@ -53,8 +56,8 @@
       }
       .slick-dots {
         display: inline-block;
-        bottom: 25%;
-        left: $margin-large;
+        bottom: rem(-10);
+        left: 0;
         width: auto;
         text-align: left;
       }
@@ -87,6 +90,11 @@
         box-shadow: $shadow-large;
       }
     }
+    @include breakpoint(large) {
+      .slick-dots {
+        bottom: 25%;
+      }
+    }
   }
 
   &__testimonialsDonut {
@@ -113,11 +121,9 @@
   }
 
   &__howItWorks {
+    @include make-section;
     text-align: center;
     z-index: 1;
-  }
-  &__howItWorksInner {
-    @include make-section;
   }
 
   &__iconBlocksWrapper {
