--- a/src/styles/global/defs/_mixins.scss
+++ b/src/styles/global/defs/_mixins.scss
@@ -364,11 +364,15 @@
 
 // Add consistent margins/padding to sections.
 @mixin make-section {
-  @include block-center;
-  max-width: $container-width;
   padding: rem(20) $margin-small;
   @include breakpoint(medium) {
     padding: rem(50) $margin-large;
+  }
+
+  &Inner,
+  &__inner {
+    @include block-center;
+    max-width: $container-width;
   }
 }
 
